# coastal_pinn_research

./: .gitignore  README.md  data.md  pyproject.toml  requirements.txt  scratch_test.py
CoastSat/: example.py
coastal_pinn/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  pipeline.py
coastal_pinn/core/: coords.py  io.py  paths.py  schema.py
coastal_pinn/sources/: bathymetry.py  sea_level.py  sediment_recovery.py  shoreline.py  transects.py  wam.py  wave_intensity.py
config/: keta.yaml  keta_test.yaml
scripts/: derive_keta_baseline.py  run_pipeline.py
tests/: conftest.py  run_offline_smoke_real_cache.py  run_real_smoke.py  smoke_offline.py  test_bathymetry.py  test_cli.py  test_config.py  test_coords.py  test_pipeline.py  test_schema.py  test_sea_level.py  test_shoreline.py  test_wave_intensity.py
